# Plan2Ship

./: .env.example  .gitignore  README.md  package-lock.json  package.json  plan_readme
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  audit.py  auth.py  config.py  copilot.py  database.py  main.py  models.py  schemas.py  stage_gates.py
backend/app/routers/: artifacts_router.py  auth_router.py  copilot_router.py  issues_router.py  projects_router.py
backend/scripts/: seed.py
backend/tests/: test_copilot_schema.py  test_stage_gates.py
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AddProjectButton.tsx  DocumentUpload.tsx  ImageLightbox.tsx  MetricsChartFigure.tsx  ProjectCard.tsx  Stage1Analysis.tsx  Stage2Analysis.tsx  Stage3Analysis.tsx  Stage4Analysis.tsx  Stage5Analysis.tsx  StageIndicator.tsx  StageSection.tsx  StageStepperNav.tsx  WebGLBackground.tsx  WelcomePage.tsx  content-blocks.tsx  layout-shell.tsx
client/src/hooks/: use-toast.ts
client/src/pages/: CreateProjectPage.tsx  HomePage.tsx  ProjectDetailPage.tsx
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
scripts/: azure-setup.sh  run-and-verify.md
server/: package-lock.json  package.json  tsconfig.json
server/scripts/: metrics_charts.py
server/src/: env.ts  server.ts
(+29 files in other folders)
